# know-your-boss

./: .env.example  .gitignore  README.md  pyproject.toml  scratch.md
kyb/: __init__.py  __main__.py  cli.py
kyb/models/: common.py  crunchbase.py
kyb/scrapers/: crunchbase.py
tests/: conftest.py  test_crunchbase.py
tests/fixtures/: crunchbase_angular_state.json  crunchbase_company.html  crunchbase_company_anonymous.html  crunchbase_search.json  crunchbase_webpage.json
